@@ -66,6 +66,8 @@ Functions:
    lflags() with no args. [MG]
  * trim() can now trim multiple characters. [MG] [GM]
  * In some cases, privs are no longer needed to use locate(). [MG]
+ * cmogrifier(), returns the mogrifier object for a channel. Suggested by
+   Trinsec, patch by Minion.
 
 Minor Changes:
  * The Can_Nspemit @power has been renamed to Can_Spoof, to better reflect
@@ -98,7 +100,7 @@ Minor Changes:
 
 Fixes:
  * Fixing list type autodetect. [GM]
- * Help fixes by Daniel Powell and others. [MG]
+ * Help fixes by Daniel Powell, AnneLions, Minion and others. [MG]
  * Connect/disconnect messages for combined channels incorrectly showed
    NOSPOOF data. Reported by Sketch. [MG]
  * The delimiter between combined channel names in @chatformat is now '|'
